# chess-graph

./: .gitignore  ARCHITECTURE.md  README.md  RECOMMENDATIONS.md  guide_python_uv.md  simplified-chess-graph.excalidraw  vercel_api.md
data_loading/: .env.example  README.md  pyproject.toml
data_loading/src/chess_graph/: __main__.py  config.py  db.py  loader_games.py  loader_openings.py  loader_puzzles.py  loader_users.py  sample_queries.py  schema.py
lichess_api_downloader/: .env.example  ARCHITECTURE.md  README.md  pyproject.toml
lichess_api_downloader/lichess_downloader/: __main__.py  config.py  explorer.py  exporter.py
sample-error-boundaries/: ErrorBoundary.tsx  README.md
sample-error-boundaries/examples/: analysis-page.tsx  app-wrapper.tsx  practice-page.tsx
sample-logging/: README.md  logger.ts  request-context.ts  sentry-integration.ts
sample-logging/examples/: feedback-route.ts  response-cache.ts
sample-validation/: README.md  schemas.ts
sample-validation/examples/: feedback-route.ts  puzzle-dataset-route.ts
suggested-openings/: README.md  openings-data.ts  openings.json
suggested-unified-opening-systems/: README.md  unified-opening-detector.ts  unified-repertoires.ts
